--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <logo>
         <!--logoはimageフォルダのlogo.pngを使用している。自分のロゴや写真を載せるとわかりやすい-->
-        <img src="images/logo.png" alt="">
+        <img src="images/ham.png" alt="">
     </logo>
     <br><br><!--brは改行-->
     <!--毎週この部分をコピペして追加してく-->
@@ -25,6 +25,12 @@
     <figure>
         <a href="html.html"><img src="images/02html.jpg" alt=""></a>
         <figcaption>HTMLについて</figcaption>
+    </figure>
+     <!-------------------------------->
+    <!--毎週この部分をコピペして追加してく-->
+    <figure>
+        <a href="first.html"><img src="images/hamfirst.png" alt=""></a>
+        <figcaption>キックオフ！</figcaption>
     </figure>
      <!-------------------------------->
 
