--- a/index.html
+++ b/index.html
@@ -21,5 +21,11 @@
         <figcaption>キックオフ！</figcaption>
     </figure>
      <!-------------------------------->
+    <!--毎週この部分をコピペして追加してく-->
+    <figure>
+        <a href="second.html"><img src="images/tora.png" alt=""></a>
+        <figcaption>キックオフ！②</figcaption>
+    </figure>
+     <!-------------------------------->
 
 </body>
