--- a/index.html
+++ b/index.html
@@ -27,5 +27,10 @@
         <figcaption>キックオフ！②</figcaption>
     </figure>
      <!-------------------------------->
-
+    
+<!--毎週この部分をコピペして追加してく-->
+    <figure>
+        <a href="grouptwo.html"><img src="images/tora.png" alt=""></a>
+        <figcaption>グループ課題②</figcaption>
+    </figure>
 </body>
