--- a/index.html
+++ b/index.html
@@ -33,4 +33,9 @@
         <a href="grouptwo.html"><img src="images/tora.png" alt=""></a>
         <figcaption>グループ課題②</figcaption>
     </figure>
+    <!--毎週この部分をコピペして追加してく-->
+    <figure>
+        <a href="think.html"><img src="images/tora.png" alt=""></a>
+        <figcaption>なんかやってるかも</figcaption>
+    </figure>
 </body>
