--- a/think.html
+++ b/think.html
@@ -27,8 +27,12 @@
             〇文字の位置<br>
             text-align: center or left or right;<br>
     </p>
-            <h2>photoshop勉強中かも</h2><br>
-    <p>
+            <h2>フォトショ・イラレ勉強中かも</h2><br>
+    <h3>200516</h3>
+    <p>Illustratorを使ってみた<br><br>
+        <img src="images/雲.png" alt=""><br><br>
+        飛行機やOの中の雲はペンツールと図形ツールを使用<br>
+        背景グラデーションにすればよかった
           
     
         </p>
