--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <title>小幡茉斐研究ノート </title>
     <!--main.cssというファイルにhtmlのスタイルの詳細を記入し、参照している-->
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="main.css?28081308">
 </head>
 <body>
     <div class="header">
