--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="contact-form">
-            <h1 class="form-logo">▷CONTACT</h1>
+            <h1 class="form-logo">▷CONTACT　まだ送れません</h1>
             <p>mail adress<span>(必須)</span></p>
             <input>
             
