--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         
         <div class="contents">
-            <h1 class="contents-title">▷CONTENTS</CONTENTS></h1><br>
+            <h1 class="contents-title">▷CONTENTS</h1><br>
             <div class="contents-logo">
                 <a href="first.html"><img src="images/ice2.png"></a>
                 <p>START</p>
