--- a/think.html
+++ b/think.html
@@ -29,8 +29,12 @@
                 <a href="think2.html"><img src="images/ice.png"></a>
                 <p>JUNE</p>
             </div>
+             <div class="contents-logo">
+                <a href="think3.html"><img src="images/ice2.png"></a>
+                <p>JUNE</p>
+            </div>
             <div class="contents-logo">
-                <a href="think.html"><img src="images/ice2.png"></a>
+                <a href="think.html"><img src="images/ice.png"></a>
                 <p>OTHERS</p>
             </div>
         </div>
