--- a/think3.html
+++ b/think3.html
@@ -20,7 +20,7 @@
             <h1 class="contents-title">▷JULY</h1><br>
     
     <h3>20.07.03</h3>
-    <p>アルディーノを使用して脈拍を図り、パソコンにリアルタイム表示させ、最終的には自分の脈拍で<br>
+    <p>アルディーノを使用して脈拍を図り、勉強していたPythonを利用しパソコンにリアルタイム表示させ、最終的には自分の脈拍で<br>
         形が動くのを眺められる仕組みをつくりたくて、脈拍を測るためにフォトリフレクタを買った<br>
         <img src="images/%E3%82%A4%E3%83%B3%E3%83%97%E3%83%A9%E3%83%B3%E3%82%BF.png"><br><br>
         ヘモグロビンが赤外線を吸収する仕組みだそうで、それで脈拍を測ることができる<br>
