--- a/think1.html
+++ b/think1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>なんかやってるかも</title>
+    <title>MAY</title>
     
     <link rel="stylesheet" href="main2.css">
 
