--- a/think3.html
+++ b/think3.html
@@ -25,7 +25,9 @@
         <img src="images/%E3%82%A4%E3%83%B3%E3%83%97%E3%83%A9%E3%83%B3%E3%82%BF.png"><br><br>
         ヘモグロビンが赤外線を吸収する仕組みだそうで、それで脈拍を測ることができる<br>
         <img src="images/%E3%82%A4%E3%83%B3%E3%83%97%E3%83%A9%E3%83%B3%E3%82%BF2.png"><br><br>
-        だがうまくいかなかった。抵抗のサイズが違うのと、配線を理解していないせいだと思う。<br>
+        だがうまくいかなかった。数値は動くが、指をリフレクタにあてたときとあてていないときの動きが微妙だった。<br>
+        抵抗のサイズが違うのと、配線を理解していないせいだと思う。<br>
+        抵抗を新しく購入し届いたら再度挑戦してみる。<br>
         memo<br>
         <a href=https://opuktr.hatenablog.com/entry/2018/08/16/194416/ target="_blank">リアルタイム表示</a>
         
