--- a/think.html
+++ b/think.html
@@ -34,7 +34,7 @@
                 <p>JULY</p>
             </div>
             <div class="contents-logo">
-                <a href="think.html"><img src="images/ice.png"></a>
+                <a href="think0.html"><img src="images/ice.png"></a>
                 <p>OTHERS</p>
             </div>
         </div>
