--- a/think3.html
+++ b/think3.html
@@ -28,8 +28,8 @@
         だがうまくいかなかった。数値は動くが、指をリフレクタにあてたときとあてていないときの動きが微妙だった。<br>
         抵抗のサイズが違うのと、配線を理解していないせいだと思う。<br>
         抵抗を新しく購入し届いたら再度挑戦してみる。<br>
-        memo<br>
-        <a href=https://opuktr.hatenablog.com/entry/2018/08/16/194416/ target="_blank">リアルタイム表示</a>
+        
+        <!--メモ用URL https://opuktr.hatenablog.com/entry/2018/08/16/194416/-->
         
 
     </p>
