--- a/think3.html
+++ b/think3.html
@@ -45,6 +45,7 @@
                〇問題点として考えられること<br>
                ・参考にした回路が間違っていた<br>
                ・arduinoのスケッチをリセットしてみる（正常に動かないで検索したら見かけた）<br>
+               →<a href="https://ehbtj.com/electronics/arduino-software-reset/">arduinoをリセット</a>
                
         </P>
         
