--- a/think.html
+++ b/think.html
@@ -34,6 +34,10 @@
                 <p>JULY</p>
             </div>
             <div class="contents-logo">
+                <a href="think2.html"><img src="images/ice.png"></a>
+                <p>Summer</p>
+            </div>
+            <div class="contents-logo">
                 <a href="think0.html"><img src="images/ice.png"></a>
                 <p>OTHERS</p>
             </div>
