--- a/think.html
+++ b/think.html
@@ -38,6 +38,10 @@
                 <p>Summer</p>
             </div>
             <div class="contents-logo">
+                <a href="think5.html"><img src="images/ice2.png"></a>
+                <p>OCT</p>
+            </div>
+            <div class="contents-logo">
                 <a href="think0.html"><img src="images/ice.png"></a>
                 <p>OTHERS</p>
             </div>
