--- a/think.html
+++ b/think.html
@@ -42,6 +42,10 @@
                 <p>OCT</p>
             </div>
             <div class="contents-logo">
+                <a href="think6.html"><img src="images/ice.png"></a>
+                <p>NOV</p>
+            </div>
+            <div class="contents-logo">
                 <a href="think0.html"><img src="images/ice.png"></a>
                 <p>OTHERS</p>
             </div>
