--- a/think.html
+++ b/think.html
@@ -46,6 +46,10 @@
                 <p>NOV</p>
             </div>
             <div class="contents-logo">
+                <a href="think7.html"><img src="images/ice2.png"></a>
+                <p>DEC</p>
+            </div>
+            <div class="contents-logo">
                 <a href="think0.html"><img src="images/ice.png"></a>
                 <p>OTHERS</p>
             </div>
