--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         </div>
         
         <div class="contents">
+            <h1 class="contents-title">▷THEME</h1>
+            <h2 class="contents-title2">「生きるということをポジティブに考える」</h2>
             <h1 class="contents-title">▷CONTENTS</h1><br>
             <div class="contents-logo">
                 <a href="first.html"><img src="images/ice2.png"></a>
