--- a/first.html
+++ b/first.html
@@ -19,8 +19,7 @@
         <h2><span style="color:coral">経営学部で満足している点と不満な点</span></h2>
         <p>■満足している点<br>
             海外への留学制度が充実している点。<a href="https://www.kanagawa-u.ac.jp/international/abroad/" target="_blank">神奈川大学</a>のページを見ると、<br>
-            派遣交換留学や推薦語学研修、海外インターンシップなど、様々なプログラムが存在し、国際経営という名の通り海外に開けている点がこの学部のいいところだと思う。また、ひらつかキャンパス内でも交換留学に来ている海外の学生を見かける。日本にいても、留学生と知り合える機会はなかなかないが、この学部では、行動を起こしたいと思う人にはチャンスがあるところが良い点であると思う。<br>
-            <img src="images/pasco.png" alt=""><br><br>
+            派遣交換留学や推薦語学研修、海外インターンシップなど、様々なプログラムが存在し、国際経営という名の通り海外に開けている点がこの学部のいいところだと思う。また、ひらつかキャンパス内でも交換留学に来ている海外の学生を見かける。日本にいても、留学生と知り合える機会はなかなかないが、この学部では、行動を起こしたいと思う人にはチャンスがあるところが良い点であると思う。<br><br>
             ■不満な点<br>
             一方的かつ同じような授業が多いこと。人間の集中力の持続時間に関する記事はたくさんあるが、100分を超える記事は見たことがない。加えて、じっと座ったまま、教授の話をただただぼーっとしながら聞く授業に意味はあるのかと感じてしまう。PDFやPowerPointのスライドをそのまま読み上げるだけの授業に、お金を払う意味があるのかと度々思うことが多い。自分の姿勢次第で変わるのかもしれないが…。
             
